<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.nyp.alltodaysduties.showDutiesActivity"
    >

    <item
        android:id="@+id/action_start_myduties"
        android:orderInCategory="2"
        android:title="@string/myDuties_title"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_start_allduties"
        android:orderInCategory="3"
        android:title="@string/showDuties_title"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_start_profile"
        android:orderInCategory="4"
        android:title="@string/profile_title"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="5"
        android:title="@string/action_label_logout"
        app:showAsAction="never"
        />
</menu>